<resources>
    <string name="app_name">GithubRepositories</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="owner_name">Owner Name:</string>
    <string name="repository_name">Repository Name:</string>
    <string name="default_branch_name">Default Branch Name:</string>
    <string name="language">Language:</string>
    <string name="fork_count">Fork Count:</string>
    <string name="username">Username:</string>
    <string name="email">Email:</string>
    <string name="hyphen">-</string>
    <string name="repositories">Repositories:</string>
    <string name="repository_list">Repository List</string>
    <string name="repository_detail">Repository Detail</string>
    <string name="user_detail">User Detail</string>
    <string name="error">Error</string>
    <string name="go_back">Go Back</string>
    <string name="retry">Retry</string>
</resources>