<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="3"
    tools:context=".feature.presentation.repositoryDetail.RepositoryDetailFragment">

    <ImageView
        android:id="@+id/iv_detail_avatar"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginVertical="10dp"
        android:layout_weight="1"
        android:scaleType="fitCenter"
        tools:src="@tools:sample/avatars" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:layout_weight="2"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/ll_repository_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/StaticTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/repository_name" />

            <TextView
                android:id="@+id/tv_repository_name"
                style="@style/DynamicTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="Test Repository Name" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/StaticTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/username" />

            <TextView
                android:id="@+id/tv_username"
                style="@style/DynamicTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="Test Username" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_fork_count"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/StaticTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fork_count" />

            <TextView
                android:id="@+id/tv_fork_count"
                style="@style/DynamicTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="216" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_language"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/StaticTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/language" />

            <TextView
                android:id="@+id/tv_language"
                style="@style/DynamicTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="C++" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_default_branch_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/StaticTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/default_branch_name" />

            <TextView
                android:id="@+id/tv_default_branch_name"
                style="@style/DynamicTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="Test Branch Name" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>