<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="7"
    tools:context=".feature.presentation.userDetail.UserDetailFragment">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginVertical="10dp"
        android:layout_weight="2"
        android:paddingHorizontal="5dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/iv_user_avatar"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            tools:src="@tools:sample/avatars" />

        <LinearLayout
            android:id="@+id/ll_user_info"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginTop="15dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/ll_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/StaticTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/email" />

                <TextView
                    android:id="@+id/tv_email"
                    style="@style/DynamicTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    tools:text="Test Email" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_owner_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/StaticTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/username" />

                <TextView
                    android:id="@+id/tv_owner_username"
                    style="@style/DynamicTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    tools:text="Test Username" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="60dp"
        android:layout_weight="5"
        android:orientation="vertical">

        <TextView
            style="@style/StaticTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/repositories"
            android:layout_marginBottom="10dp"/>


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_user_repositories"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>

</LinearLayout>